# goit-web-hw-03

./: README.md  factorize.py  factorize_big_num.py  factorize_simple.py  min.py  pyproject.toml  sorting_files.py  test03.py
